--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.15.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
     "sugar": "^2.0.6"
