--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
   "name": "html",
+  "description": "A Vue.js project",
   "version": "1.0.0",
-  "description": "## インストール",
-  "main": "index.js",
+  "author": "",
+  "license": "MIT",
+  "private": true,
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 0.0.0.0",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+  },
   "dependencies": {
-    "@vue/compiler-sfc": "^3.0.0-beta.15",
     "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
-    "cores": "^0.8.5",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "firebase": "^7.15.1",
-    "firebase-admin": "^8.12.1",
-    "firebase-functions": "^3.7.0",
-    "jquery": "^3.5.1",
-    "nodemon": "^2.0.4",
-    "rollup": "^2.16.1",
     "sugar": "^2.0.6",
     "validatorjs": "^3.18.1",
-    "vue": "^2.6.11",
+    "vue": "^2.5.11",
     "vue-js-modal": "^2.0.0-rc.3"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
   "devDependencies": {
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.26.8",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "scripts": {
-    "serve": "npx nodemon functions/index.js",
-    "dev": "npx rollup -c rollup-config.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.2.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.4",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "vue-loader": "^13.0.5",
+    "vue-template-compiler": "^2.4.4",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
+  }
 }
