--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,23 @@ public/css/*
 public/js/*
 .firebase
 firebase_key.json
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
