--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "sugar": "^2.0.6",
     "validatorjs": "^3.18.1",
     "vue": "^2.6.11",
-    "vue-js-modal": "^2.0.0-rc.3"
+    "vue-js-modal": "^2.0.0-rc.3",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
