--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "node_server":"nodemon functions/index.js"
+    "node_server": "nodemon functions/index.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "firebase": "^7.15.1",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
@@ -20,6 +21,7 @@
     "validatorjs": "^3.18.1",
     "vue": "^2.6.11",
     "vue-js-modal": "^2.0.0-rc.3",
+    "vue-loading-template": "^1.3.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
